Worked on home, features, about, and contact pages

--- a/about.html
+++ b/about.html
@@ -17,33 +17,38 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="features.html">Features</a>
-            <a href="product.html">Product</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
 
     <div class="aboutus">
-        <h1>About</h1>
-
+        <h2>About Us</h2>
         <p>We are <strong>Mindcrafters</strong>, a group of UCI Students in IN4MATX 172: Project in Health Informatics. As a team we are working on the development of 
-            <strong>CalmConnect</strong> - a mobile app intended to assist adolescants and young adults in rural areas take care of mental health from the comfort of their own home. 
-            <br><br>Our mission with CalmConnect is to provide a solution to the mental health crisis that is affecting teenagers and young adults across the US. With CalmConnect 
-            we aim to supply assistance to our young users in caring for their wellbeing and equipping them with the necessary resources and engaging activities to maintain their mental health.
-        </p>
+            <strong>CalmConnect</strong> - a mobile app intended to aid adolescents and young adults in rural areas take care of mental health from the comfort of their own home.</p>
     </div>
+
+    <div class="missionbg">
+        <div class="ourmission">
+            <h2>Our Mission</h2>
+            <p>With CalmConnect we aim to provide a solution to the mental health crisis that is affecting teenagers and young adults across the United States. Our solution
+               is designed to offer assistance to our young audience in caring for their wellbeing and equipping them with the necessary resources to maintain their mental health.</p>
+        </div>
+    </div>
+    
 
     <div class="team">
         <h2>Meet our team!</h2>
 
         <h3>Mikelly Felix</h3>
-            <h4><u>Role:</u> UX Lead<br><u>Major:</u> Public Health</h4>
+            <h5><u>Role:</u> UX Lead<br><u>Major:</u> Public Health</h5>
         <h3>Mirsab Mirza</h3>
-            <h4><u>Role:</u> Business Lead<br><u>Major:</u> Public Health</h4>
+            <h5><u>Role:</u> Business Lead<br><u>Major:</u> Public Health</h5>
         <h3>Ariane Ochoa</h3>
-            <h4><u>Role:</u> Tech Lead<br><u>Major:</u> Informatics</h4>
+            <h5><u>Role:</u> Tech Lead<br><u>Major:</u> Informatics</h5>
         <h3>Enya Pansoy</h3>
-            <h4><u>Role:</u> Research Lead<br><u>Major:</u> Public Health</h4>
+            <h5><u>Role:</u> Research Lead<br><u>Major:</u> Public Health</h5>
     </div>
+
 </body>
 </html>
