Updated pages with correct descriptions.

--- a/about.html
+++ b/about.html
@@ -31,8 +31,9 @@
     <div class="missionbg">
         <div class="ourmission">
             <h2>Our Mission</h2>
-            <p>With CalmConnect we aim to provide a solution to the mental health crisis that is affecting teenagers and young adults across the United States. Our solution
-               is designed to offer assistance to our young audience in caring for their wellbeing and equipping them with the necessary resources to maintain their mental health.</p>
+            <p>CalmConnect is a revolutionary mental health app developed to combat the pressing issue of mental health crises among young adults. 
+                With a rise in mental health issues, exacerbated by the COVID-19 pandemic, our team recognized the urgent need for accessible and effective solutions. 
+                Our app is designed to bridge the gap between individuals and mental health professionals, providing support, resources, and daily challenges based on self-care.</p>
         </div>
     </div>
     
