--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,11 @@
     </header>
     
     <div class="contactus">
-        <h1>Contact us!</h1>
-
+        <div class="contactheader">
+            <h1 id="chead">Get in touch!</h1>
+            <h3 id="ctext">Have questions or feedback? We'd love to hear from you!</h3>
+        </div>
+        
         <div class="contactblock">
             <div class="contactform">
                 <form action="mailto:arianekochoa@gmail.com" method="post" enctype="text/plain">
