--- a/features.html
+++ b/features.html
@@ -23,9 +23,10 @@
     </header>
     
     <div class="ccintro">
-        <h1>Calm Connect</h1>
-        <p>CalmConnect is a mobile app that provides its users with tailored quests to better their mental health 
-            and guides them towards specific resources that provide treatment to any mental health struggles.</p>    
+        <h1>What is CalmConnect?</h1>
+        <p>CalmConnect is more than just a mental health app—it's a lifeline for those navigating the challenges of mental wellbeing. 
+            Our app offers a nuanced approach to mental health care, integrating gamification and personalized content delivery to create a truly unique experience. 
+            Through weekly challenges and curated resources, users can tailor their mental health journey to their individual needs, all from the palm of their hands.</p>    
     </div>
     
 
@@ -42,7 +43,7 @@
                     CalmConnect provides users with small and reasonable quests each day to encourage users to care for themselves in anyway they can.</p>
             </div>
             <div id="feat3">
-                <h2>Customize your quest experience to be tailored to your interests and needs.</h2>
+                <h2>Customize your quest experience.</h2>
                 <p>Be able to decide the types of quests that are offered for you and the rate at which you receive them. 
                    Specify your circumstances and interests to let CalmConnect know what quests are best fit for you.</p>
             </div>
