--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
+
+        <!--Title-->
+        <div class="titleheader">
+            <h1>CalmConnect</h1>
+        </div>
     </header>
+
+    <div class="homeintro">
+        <h2>Offline Mental Health Care</h2>
+        <h3>Welcome to CalmConnect, your companion in navigating the complexities of mental health. 
+            Our app offers a welcoming environment for young adults to explore, engage, and find solace in their mental health journey. 
+            Whether you're seeking support, resources, or simply a listening ear, CalmConnect is here to accompany you every step of the way.</h3>
+    </div>
     
     <div class="introbg">
         <div class="intro">
@@ -45,15 +57,6 @@
                 <h3>Earn and unlock badges for reaching milestones in quest completion.</h3>
             </div>
         </div>
-    </div>
-   
-
-    <div class="reasoning">
-        <h2>Offline Mental Health Care</h2>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
     </div>
 </body>
 </html>
