--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
+
+        <!--Title-->
+        <div class="titleheader">
+            <h1>CalmConnect</h1>
+        </div>
     </header>
     
     <div class="contactus">
