Updated about page with team member photos.

--- a/features.html
+++ b/features.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <header>
+        <!--Title-->
+        <h1 class="titleheader">CalmConnect</h1>
+
         <!--Navigation Bar-->
         <nav>
             <a href="index.html">Home</a>
@@ -20,11 +23,6 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-
-        <!--Title-->
-        <div class="titleheader">
-            <h1>CalmConnect</h1>
-        </div>
     </header>
     
     <div class="ccintro">
@@ -39,27 +37,27 @@
         <div class="feats">
             <div id="feat1">
                 <h2>Get matched with curated resources.</h2>
+                <hr class="dashleft">
                 <p>Take a quiz to inform CalmConnect of your mental health needs, symptoms, and preferences. 
                     From then on, receive personalized resources that are within your selected demographics.</p>
             </div>
             <div id="feat2">
                 <h2>Engage in daily "calm quests" to boost your wellbeing.</h2>
+                <hr class="dashright">
                 <p>Through carefully selected activites take some time to connect with your mind, body, and others. 
                     CalmConnect provides users with small and reasonable quests each day to encourage users to care for themselves in anyway they can.</p>
             </div>
             <div id="feat3">
                 <h2>Customize your quest experience.</h2>
+                <hr class="dashleft">
                 <p>Be able to decide the types of quests that are offered for you and the rate at which you receive them. 
                    Specify your circumstances and interests to let CalmConnect know what quests are best fit for you.</p>
             </div>
             <div id="feat4">
-                <h2>Earn badges for completing quests and build up your collection!</h2>
+                <h2>Earn badges and build up your collection!</h2>
+                <hr class="dashright">
                 <p>Complete your daily calm quests and earn badges each week for hitting milestones in quest completion.
                     Collect a variety of badges and fill up your collection!</p>
-            </div>
-            <div id="feat5">
-                <h2>Another feature...</h2>
-                <p>Lorem ipsum.</p>
             </div>
         </div>
     </div>
