--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
     <header>
+        <!--Title-->
+        <h1 class="titleheader">CalmConnect</h1>
+
         <!--Navigation Bar-->
         <nav>
             <a href="index.html">Home</a>
@@ -22,16 +25,11 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-
-        <!--Title-->
-        <div class="titleheader">
-            <h1>CalmConnect</h1>
-        </div>
     </header>
 
     <div class="homeintro">
-        <h2>Offline Mental Health Care</h2>
-        <h3>Welcome to CalmConnect, your companion in navigating the complexities of mental health. 
+        <h2 class="hometitle">Offline Mental Health Care</h2>
+        <h3 class="hometext">Welcome to CalmConnect, your companion in navigating the complexities of mental health. 
             Our app offers a welcoming environment for young adults to explore, engage, and find solace in their mental health journey. 
             Whether you're seeking support, resources, or simply a listening ear, CalmConnect is here to accompany you every step of the way.</h3>
     </div>
