--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <header>
+        <!--Title-->
+        <h1 class="titleheader">CalmConnect</h1>
+
         <!--Navigation Bar-->
         <nav>
             <a href="index.html">Home</a>
@@ -20,17 +23,13 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-
-        <!--Title-->
-        <div class="titleheader">
-            <h1>CalmConnect</h1>
-        </div>
     </header>
     
     <div class="contactus">
         <div class="contactheader">
             <h1 id="chead">Get in touch!</h1>
-            <h3 id="ctext">Have questions or feedback? We'd love to hear from you!</h3>
+            <hr class="dashleft">
+            <h4 id="ctext">Have questions or feedback? We'd love to hear from you!</h4>
         </div>
         
         <div class="contactblock">
