Added design process to home page.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,37 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <div class="processintro">
+            <h2 class="processtitle">Design Process</h2>
+            <h3 class="processtext">Take a look at our team's design process in creating CalmConnect and see how we reached our end product.</h3>    
+        </div>
+        
+        <div class="process">
+            <div id="lowfi">
+                <h2>Low-Fidelity Wireframes</h2>
+                <hr class="dashleft">
+                <p>Once we finalized our main features for the app, our team member, Ariane, sketched out some low-fidelity wireframes of the app solution.
+                    Depicted here are sketches for the home page, quest page, and profile page.
+                </p>
+                <img class=lofiimg src="/deliverables/home_page.png">
+                <img class=lofiimg src="/deliverables/quest_page.png">
+                <img class=lofiimg src="/deliverables/profile_page.png">
+            </div>
+            <div id="midfi">
+                <h2>Mid-Fidelity Wireframes</h2>
+                <hr class="dashright">
+                <p>From then on, Ariane transferred the low-fidelity wireframes into mid-fidelity wireframes on Figma. This allowed for more detail to be displayed
+                    and provided a firm starting point in starting the high-fidelity mockups.
+                </p>
+            </div>
+            <div id="hifi">
+                <h2>High-Fidelity Mockups</h2>
+                <hr class="dashright">
+                <p>The group worked on Figma to design the high-fidelity mockups from the basis of our mid and low-fidelity wireframes.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
