Worked on design process.

--- a/features.html
+++ b/features.html
@@ -39,7 +39,7 @@
                 <h2>Get matched with curated resources.</h2>
                 <hr class="dashleft">
                 <p>Take a quiz to inform CalmConnect of your mental health needs, symptoms, and preferences. 
-                    From then on, receive personalized resources that are within your selected demographics.</p>
+                    From then on, receive personalized resources that are catered towards your selected demographics.</p>
             </div>
             <div id="feat2">
                 <h2>Engage in daily "calm quests" to boost your wellbeing.</h2>
@@ -56,8 +56,7 @@
             <div id="feat4">
                 <h2>Earn badges and build up your collection!</h2>
                 <hr class="dashright">
-                <p>Complete your daily calm quests and earn badges each week for hitting milestones in quest completion.
-                    Collect a variety of badges and fill up your collection!</p>
+                <p>Complete daily calm quests to earn badges by hitting milestones in quest completion.</p>
             </div>
         </div>
     </div>
