Worked on the home and features pages.

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!--Title-->
-        <h1 class="titleheader">CalmConnect</h1>
+        <h1 class="titleheader">CalmQuest</h1>
 
         <!--Navigation Bar-->
         <nav>
