Added background section.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,34 @@
         </div>
     </div>
 
+    <div class="backgroundbg">
+        <div class="backgroundintro">
+            <h1 class="backgroundtitle">Background and Existing Solutions</h1>
+            <h5 class="backgroundtext"><i>Take a look at our team's design process in creating CalmQuest.</i></h5>    
+        </div>
+        
+        <div class="background">
+            <div id="problem">
+                <h2>The Problem</h2>
+                <hr class="dashleft">
+                <p>
+                </p>
+            </div>
+            <div id="solutions">
+                <h2>Existing Solutions</h2>
+                <hr class="dashright">
+                <p>
+                </p>
+            </div>
+            <div id="gaps">
+                <h2>Gap Analysis</h2>
+                <hr class="dashleft">
+                <p>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <div class="researchbg">
         <div class="researchintro">
             <h1 class="researchtitle">User Research</h1>
