--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mindcrafters</title>
     <!-- CSS File -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="contact_styles.css">
     <!--DM Sans Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
