Worked on home page.

--- a/index.html
+++ b/index.html
@@ -78,22 +78,6 @@
                 </div>
             </div>
 
-
-            <div id="gaps">
-                <div id="gaptxt">
-                    <h2>Gap Analysis</h2>
-                    <hr class="dashleft">
-                    <ul>
-                        <li>increase in mental health problems with a 25% rise attributed to the COVID-19 pandemic (WHO, 2022)</li>
-                        <li>as anxiety and depression rates increase, so do unemployment rates, housing insecurity, and substance abuse and addiction as ramifications (PRC, 2019)</li>
-                        <li>structural inequities and geographic differences, exacerbate mental health disparaties and hinder timely access to treatment (Kataoka et al., 2002)</li>
-                    </ul>
-                </div>
-                <div id="gapimg">
-                    <img class="bgimgsright" src="background images/Problem.jpg">
-                </div>
-            </div>
-
         </div>
     </div>
 
@@ -152,6 +136,7 @@
         </div>
         
         <div class="process">
+
             <div id="lowfi">
                 <h2>Low-Fidelity Sketches</h2>
                 <hr class="dashleft">
@@ -161,21 +146,32 @@
                 </p>
                 <img class=designimg src="wireframe images/Low-fidelity Wireframes.png">
             </div>
+
             <div id="midfi">
                 <h2>Mid-Fidelity Wireframes</h2>
                 <hr class="dashright">
-                <p>From then on, Ariane transferred the low-fidelity sketches into mid-fidelity wireframes on Figma. The mid-fidelity wireframes that were designed
-                    were for the primary pages of the application: the home page with both a weekly and daily view, a specific quest page, a page to complete a quiz that
-                    matches the user to mental health resources, and the profile page. We conducted some usability testing on these wireframes to gain insight on how best
-                    to implement those ideas into our high-fidelity designs.
+                <p>From then on, we transferred the low-fi sketches into mid-fidelity wireframes on Figma. The mid-fi wireframes that were designed
+                    were for the primary pages of the application: the home page with all quests offered in the week, a specific quest page, and the page to complete a quiz that
+                    matches the user to mental health resources.
                 </p>
                 <img class=designimg src="wireframe images/Mid-fidelity Wireframes.png">
             </div>
+
+            <div id="usetest">
+                <h2>Usability Testing</h2>
+                <hr class="dashleft">
+                <p>Amidst developing our mid-fi and hi-fi mockups we conducted some usability testing and received feedback to improve our designs. Primarly we found that users 
+                    wanted a separation of the home page into weekly and daily views, a way to track their progress in quest completion, a way to customize the frequency and 
+                    type of quests they received, a simplified navigation bar, and lastly more engaging and appealing visuals on the pages.
+                </p>
+                <img class=designimg src="wireframe images/Mid-fidelity Wireframes-1.png">
+            </div>
+
             <div id="hifi">
                 <h2>High-Fidelity Mockups</h2>
-                <hr class="dashleft">
-                <p>After consolidating our ideas from the mid and lo-fi wireframes, our group moved on to designing the high-fidelity mockups of CalmConnect. We first 
-                    decided on a typeface and color palette that was both engaging and relaxing to the eyes. With regards to the mockups themselves, they consist of our 
+                <hr class="dashright">
+                <p>Based on user feedback and we made adjustments to our mockups and completed the high-fidelity mockups of CalmConnect. We first decided on a typeface and 
+                    expanded our color palette to be both engaging and relaxing to the eyes. With regards to the mockups themselves, they consist of our 
                     finalized features: offering daily calm quests with progress trackers and guided tips, earning badges for completing the calm quests, and supplying 
                     mental health resources based on quiz responses from users.
                 </p>
@@ -184,11 +180,12 @@
                 <br>
                 <img class=designimg src="prototype images/High Fidelity Prototype-2.png">
             </div>
+            
             <div id="prototype">
                 <h2>Final Prototype</h2>
-                <hr class="dashright">
-                <p>Presented here is our final prototype of CalmQuest including interactive elements and a streamlined experience of the main functionalities
-                    of our app. Check it out on Figma or using the pop-up here!
+                <hr class="dashleft">
+                <p>After multiple iterations of our designs and implementation of user feedback we present our fully functional prototype of CalmConnect which can
+                    be checked out on Figma or using the pop-up here!
                 </p>
                 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="960" height="500" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpMyVwDj7d4YfTDbY0xrteD%2FWireframing-and-Lo-fi-Mockups%3Ftype%3Ddesign%26node-id%3D160-785%26viewport%3D1827%252C405%252C0.79%26t%3DaYLXlI91YI21r4aw-1%26scaling%3Dscale-down%26starting-point-node-id%3D160%253A785%26mode%3Ddesign" allowfullscreen></iframe>
             </div>
